--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwind.config.cjs"
   ],
   "dependencies": {
+    "@heroicons/vue": "^2.1.1",
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.4.0",
     "rellax": "^1.12.1",
@@ -42,6 +43,7 @@
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
     "nuxt": "^3.11.1",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.9",
     "release-it": "^17.1.1",
     "typescript": "^5.4.2",
