--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@heroicons/vue": "^2.1.1",
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.5.0",
+    "@nuxthub/core": "^0.4.1",
     "rellax": "^1.12.1",
     "ufo": "^1.5.3",
     "vue": "^3.4.21",
@@ -49,7 +50,8 @@
     "nuxt-icon": "^0.6.9",
     "release-it": "^17.1.1",
     "typescript": "^5.4.2",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "wrangler": "^3.48.0"
   },
   "release-it": {},
   "version": "0.0.3"
