--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
     "nuxt": "^3.11.1",
+    "nuxt-auth-utils": "^0.0.22",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.9",
     "release-it": "^17.1.1",
