--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "explicit"
     },
+    "files.associations": {
+      "*.css": "postcss"
+    },
     "typescript.tsdk": "node_modules\\typescript\\lib"
 }
