--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.1",
+    "@nuxt/ui": "^2.15.1",
     "@nuxtjs/color-mode": "^3.3.3",
     "@nuxtjs/supabase": "^1.2.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
