--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.1",
+    "@nuxt/fonts": "^0.6.1",
     "@nuxt/ui": "^2.15.1",
     "@nuxtjs/color-mode": "^3.3.3",
     "@nuxtjs/supabase": "^1.2.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/typography": "^0.5.12",
     "@types/rellax": "^1.7.7",
+    "@vite-pwa/nuxt": "^0.6.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^9.0.0",
