Add @nuxt/eslint package and update eslint configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "explicit"
     },
+    // Enable ESlint flat config support
+  "eslint.experimental.useFlatConfig": true,
     "files.associations": {
       "*.css": "tailwind, postcss"
   },
