--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.3.1",
+    "@nuxt/eslint": "^0.3.7",
     "@nuxt/fonts": "^0.6.1",
     "@nuxt/ui": "^2.15.1",
     "@nuxtjs/color-mode": "^3.3.3",
